# hexflow

./: .gitignore  AI.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
examples/fishing/: fishing.spec.md  settings.py  workflow.dag
examples/fishing/confirmation/: app.py
examples/fishing/license-type/: app.py
examples/fishing/license-type/templates/: license_form.html
examples/fishing/name-and-address/: app.py
examples/fishing/name-and-address/templates/: custom_form.html
examples/fishing/payment/: app.py
examples/fishing/payment/templates/: payment_form.html
examples/government/: library-card.dag  library-card.spec.feature  library-card.spec.md  library-card.spec.yaml  playwright.config.py  pytest.ini  requirements-test.txt  run_tests.py  settings.py
examples/government/apps/application-confirmation/: __init__.py  app.py
examples/government/apps/library-preferences/: __init__.py  app.py
examples/government/apps/personal-details/: __init__.py  app.py
examples/government/apps/terms-conditions/: __init__.py  app.py
examples/government/skeletons/: __init__.py  gds_casa.py  gds_display.py
examples/government/skeletons/assets/: govuk-clean.css  govuk-static.css
examples/government/skeletons/templates/: gds_base.html  gds_display.html  gds_form.html
examples/government/tests/: __init__.py  conftest.py  test_library_card_workflow.py  test_simple.py
examples/onboarding/: onboarding.dag  onboarding.spec.md  settings.py
examples/onboarding/hr-documentation/: __init__.py  app.py
examples/onboarding/it-setup/: __init__.py  app.py
examples/onboarding/job-details/: __init__.py  app.py
examples/onboarding/personal-info/: __init__.py  app.py
examples/onboarding/templates/: onboarding_base.html  onboarding_form.html
examples/onboarding/welcome-confirmation/: __init__.py  app.py
examples/self-test/: test-flow.dag
examples/self-test/app-one/: __init__.py  app.py
examples/self-test/app-three/: __init__.py  app.py
examples/self-test/app-two/: __init__.py  app.py
examples/self-test/confirmation/: app.py
examples/self-test/templates/: test_form.html
examples/subclassing_demo/: custom_display_app.py  test_template_inheritance.py
examples/subclassing_demo/templates/: display.html
hexflow/launcher/: app_launcher.py
hexflow/runner/: dag_parser.py
hexflow/skeletons/casa/: __init__.py
hexflow/skeletons/display/: __init__.py
hexflow/skeletons/http_base/: app.py
modularbuilder/: __init__.py
modularbuilder/launcher/: __init__.py
modularbuilder/skeletons/: __init__.py
modularbuilder/skeletons/display/: app.py
modularbuilder/state/: backend.py
src/hexflow/: __init__.py
src/hexflow/launcher/: cli.py
src/hexflow/runner/: __init__.py  router.py
src/hexflow/skeletons/casa/: app.py
src/hexflow/skeletons/display/: app.py
src/hexflow/state/: __init__.py  session.py  sqlite_backend.py
tests/: __init__.py  test_launcher.py  test_skeletons.py
(+7 files in other folders)
