[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexflow"
dynamic = ["version"]
description = "AI-aware modular application framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Ben Collier", email = "bmcollier@gmail.com"},
]
keywords = ["workflow", "ai", "automation", "forms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
]
dependencies = [
    "flask>=2.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hexflow"]
force-include = { "examples" = "hexflow/examples", "AI.md" = "hexflow/AI.md" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.290",
]

[project.urls]
"Source Code" = "https://github.com/bmcollier/hexflow"
"Bug Reports" = "https://github.com/bmcollier/hexflow/issues"

[project.scripts]
hexflow = "hexflow.launcher.cli:main"

[tool.hatch.version]
path = "src/hexflow/__init__.py"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]